Time: 21 ms (82.31%), Space: 61.2 MB (74.64%) - LeetHub